tests/error/addInteger-wrong-1st-argument-bool.uplc
(program 1.0.0[[(builtin addInteger)(con bool True)](con integer 10)])